--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,4 @@
-<h1>main</h1>
-<h1>Product</h1>
-<h1>About Me</h1>
-<h1>Location</h1>
+<h1>หลัก</h1>
+<h1>สินค้า</h1>
+<h1>เกี่ยวกับฉัน</h1>
+<h1>ที่ตั้ง</h1>
